@@ -2678,6 +2678,49 @@ Use 'go-getoptions.test command help <command>' for extra details.
 		}
 	})
 
+	t.Run("autogenerated help for command", func(t *testing.T) {
+		helpBuf := new(bytes.Buffer)
+		fn := func(ctx context.Context, opt *getoptions.GetOpt, args []string) error {
+			return nil
+		}
+		opt := getoptions.New()
+		opt.Bool("flag", false)
+		getoptions.Writer = helpBuf
+		command := opt.NewCommand("command", "")
+		command.NewCommand("sub-command", "").SetCommandFn(fn)
+		opt.HelpCommand("help")
+		remaining, err := opt.Parse([]string{"command"})
+		if err != nil {
+			t.Errorf("Unexpected error: %s", err)
+		}
+		err = opt.Dispatch(context.Background(), remaining)
+		if err == nil {
+			t.Errorf("expected error, non called")
+		}
+		if !errors.Is(err, getoptions.ErrorHelpCalled) {
+			t.Errorf("Unexpected error: %s", err)
+		}
+		expected := `NAME:
+    go-getoptions.test command
+
+SYNOPSIS:
+    go-getoptions.test command [--flag] [--help] <command> [<args>]
+
+COMMANDS:
+    sub-command    
+
+OPTIONS:
+    --flag    (default: false)
+
+    --help    (default: false)
+
+Use 'go-getoptions.test command help <command>' for extra details.
+`
+		if helpBuf.String() != expected {
+			t.Errorf("Wrong output:\n%s\n", firstDiff(helpBuf.String(), expected))
+		}
+	})
+
 	t.Run("help option for sub-command", func(t *testing.T) {
 		helpBuf := new(bytes.Buffer)
 		commandFn := func(ctx context.Context, opt *getoptions.GetOpt, args []string) error {
